# Netflix_Streamlit_Aira

./: README.md  pyproject.toml
.streamlit/: config.toml
docs/: setup.md
src/netflix/: __init__.py  app.py
src/netflix/assets/style/: charts.css  dashboard.css  insights.css  main.css
src/netflix/components/: author_credit.py  branding.py  cards.py  country_charts.py  country_sections.py  filters.py  footer.py  home_summary.py  html_templates.py  success_charts.py  success_sections.py  theme.py  title_analytics.py  title_profile.py  visuals.py
src/netflix/components/html/: author_credit.html  card_header.html  disclaimer_footer.html  donut_stats.html  empty_state.html  kpi_card.html  market_map_heading.html  market_reach_section.html  market_reach_tile.html  nordic_rank_row.html  section_divider.html  streamly_banner_close.html  streamly_logo_fallback.html  streamly_page_header.html  success_kpi_card.html  success_section_heading.html  success_story_card.html  title_profile_genre_pill.html  title_profile_hero.html  title_profile_kpi_card.html  title_profile_kpi_grid.html  title_profile_rating_stars.html  title_profile_trailer_button.html  title_profile_trailer_unavailable.html  title_selector_label.html
src/netflix/pages/: charts.py  country_insights.py  dashboard.py  insights.py  success_profile.py
src/netflix/utils/: constants.py  country_insights.py  helpers.py  success_profile.py
